[package]
name = "serial"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-any", "unstable-traits" ]  }
#embassy-futures = { version = "0.1.0", path = "../../embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.7"
#embedded-hal = "1.0.0-rc.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false, features = ["defmt"] }
nb = "1.0.0"
nom = { version = "7.1.3", default-features = false }
anyhow = { version = "1.0.75", default-features = false }
eeprom24x = "0.6.0"
postcard = { version = "1.0.8", default-features = false, features = ["defmt", "heapless"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
#debug = 2
